[gd_scene load_steps=32 format=3 uid="uid://q45nf2rag672"]

[ext_resource type="Script" path="res://scripts/paddle1.gd" id="1_60r7s"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_iwfre"]
[ext_resource type="PackedScene" uid="uid://b407oradvah1q" path="res://prefabs/powerups/wall.tscn" id="2_k7d4v"]
[ext_resource type="Script" path="res://scripts/paddle2.gd" id="2_q0brg"]
[ext_resource type="PackedScene" uid="uid://dimvx5wiqbvyj" path="res://prefabs/powerups/multipleBalls.tscn" id="3_jy4mp"]
[ext_resource type="PackedScene" uid="uid://byyy34ii2iwl0" path="res://prefabs/ball.tscn" id="4_7rny7"]
[ext_resource type="PackedScene" uid="uid://fq3ucxv1vkhf" path="res://prefabs/powerups/bomb.tscn" id="4_biab7"]
[ext_resource type="Shader" path="res://shaders/crt.gdshader" id="5_2n6l1"]
[ext_resource type="AudioStream" uid="uid://dvhiyovcq84ij" path="res://sounds/wallhit.wav" id="6_y3bks"]
[ext_resource type="Texture2D" uid="uid://dbqgq41povfox" path="res://sprites/paddlePiece.png" id="7_b1b7p"]
[ext_resource type="Script" path="res://scripts/openWindow.gd" id="10_vwyb0"]
[ext_resource type="Texture2D" uid="uid://dk7equbg1jlmf" path="res://sprites/cursor.png" id="11_7001w"]
[ext_resource type="Script" path="res://crt.gd" id="12_juhkd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s10b8"]
size = Vector2(1155, 320)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yili1"]
size = Vector2(363, 1504)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ynd0s"]
size = Vector2(40, 200)

[sub_resource type="Gradient" id="Gradient_kqkwh"]
offsets = PackedFloat32Array(0.548673, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_2lv1w"]
gradient = SubResource("Gradient_kqkwh")
width = 16

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_oqtrq"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(0, 50, 0)
angle_min = -720.0
angle_max = 720.0
spread = 90.0
initial_velocity_min = 1000.0
initial_velocity_max = 1000.0
gravity = Vector3(0, 0, 0)
damping_min = 1000.0
damping_max = 5000.0
scale_min = 2.0
scale_max = 2.0
color_ramp = SubResource("GradientTexture1D_2lv1w")

[sub_resource type="Animation" id="Animation_gxr45"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_e306j"]
resource_name = "idle"
loop_mode = 1

[sub_resource type="Animation" id="Animation_axk11"]
resource_name = "respawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.6, 0.666667, 0.7, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qbtav"]
_data = {
"RESET": SubResource("Animation_gxr45"),
"idle": SubResource("Animation_e306j"),
"respawn": SubResource("Animation_axk11")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w64ea"]
size = Vector2(350, 525)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_b0tvr"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(0, 50, 0)
angle_min = -720.0
angle_max = 720.0
direction = Vector3(-1, 0, 0)
spread = 90.0
initial_velocity_min = 1000.0
initial_velocity_max = 1000.0
gravity = Vector3(0, 0, 0)
damping_min = 1000.0
damping_max = 5000.0
scale_min = 2.0
scale_max = 2.0
color_ramp = SubResource("GradientTexture1D_2lv1w")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a02c8"]
size = Vector2(29, 900)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dvta0"]
bg_color = Color(0.0971741, 0.0965545, 0.127556, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_c1hcg"]
color = Color(0.878431, 0.47451, 0.521569, 1)
thickness = 11
vertical = true

[sub_resource type="StyleBoxLine" id="StyleBoxLine_hampa"]
color = Color(1, 1, 1, 1)
thickness = 4
vertical = true

[sub_resource type="Theme" id="Theme_f367e"]
VSlider/styles/grabber_area = SubResource("StyleBoxLine_c1hcg")
VSlider/styles/slider = SubResource("StyleBoxLine_hampa")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2u148"]
shader = ExtResource("5_2n6l1")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.07
shader_parameter/scanlines_width = 0.5
shader_parameter/grille_opacity = 0.072
shader_parameter/resolution = Vector2(1000, 1000)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.002
shader_parameter/noise_opacity = 0.25
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.045
shader_parameter/aberration = 0.03
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 1.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.1

[node name="Game" type="Node2D"]
process_mode = 3
texture_filter = 1
script = ExtResource("1_iwfre")
powerups = Array[Resource]([ExtResource("2_k7d4v"), ExtResource("3_jy4mp"), ExtResource("4_biab7")])

[node name="PowerUps" type="Node2D" parent="."]

[node name="Ball" parent="." instance=ExtResource("4_7rny7")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
process_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 592)
shape = SubResource("RectangleShape2D_s10b8")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -592)
shape = SubResource("RectangleShape2D_s10b8")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(757.5, 0)
shape = SubResource("RectangleShape2D_yili1")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-760, -1)
shape = SubResource("RectangleShape2D_yili1")

[node name="Paddle1" type="CharacterBody2D" parent="." groups=["paddle"]]
process_mode = 1
position = Vector2(-535, 0)
script = ExtResource("1_60r7s")
moveDirection = Vector2i(0, 1)
inputActions = Array[StringName]([&"up1", &"down1"])

[node name="ColorRect" type="ColorRect" parent="Paddle1"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -100.0
offset_right = 20.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle1"]
shape = SubResource("RectangleShape2D_ynd0s")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Paddle1"]
position = Vector2(7, 0)
emitting = false
process_material = SubResource("ParticleProcessMaterial_oqtrq")
texture = ExtResource("7_b1b7p")
lifetime = 2.0
one_shot = true
explosiveness = 1.0
fixed_fps = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="Paddle1"]
libraries = {
"": SubResource("AnimationLibrary_qbtav")
}

[node name="Paddle2" type="CharacterBody2D" parent="." groups=["paddle"]]
process_mode = 1
position = Vector2(534, 0)
script = ExtResource("2_q0brg")
moveDirection = Vector2i(0, 1)
inputActions = Array[StringName]([&"up2", &"down2"])

[node name="ColorRect" type="ColorRect" parent="Paddle2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -100.0
offset_right = 20.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle2"]
shape = SubResource("RectangleShape2D_ynd0s")

[node name="Below" type="Area2D" parent="Paddle2"]
position = Vector2(-256, 352)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle2/Below"]
shape = SubResource("RectangleShape2D_w64ea")

[node name="Above" type="Area2D" parent="Paddle2"]
position = Vector2(-256, -352)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle2/Above"]
shape = SubResource("RectangleShape2D_w64ea")

[node name="ThinkTick" type="Timer" parent="Paddle2"]
autostart = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="Paddle2"]
position = Vector2(-6, 0)
emitting = false
process_material = SubResource("ParticleProcessMaterial_b0tvr")
texture = ExtResource("7_b1b7p")
lifetime = 2.0
one_shot = true
explosiveness = 1.0
fixed_fps = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="Paddle2"]
libraries = {
"": SubResource("AnimationLibrary_qbtav")
}

[node name="PaddleZone1" type="Area2D" parent="."]
process_mode = 1
position = Vector2(-567, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PaddleZone1"]
position = Vector2(-3.5, -1)
shape = SubResource("RectangleShape2D_a02c8")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PaddleZone1"]
position = Vector2(1069, 0)
stream = ExtResource("6_y3bks")
volume_db = -16.793

[node name="PaddleZone2" type="Area2D" parent="."]
process_mode = 1
position = Vector2(573, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PaddleZone2"]
position = Vector2(-3.5, -1)
shape = SubResource("RectangleShape2D_a02c8")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PaddleZone2"]
position = Vector2(-1140, 0)
stream = ExtResource("6_y3bks")
volume_db = -16.793

[node name="Score1" type="Label" parent="."]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.0
offset_top = -328.0
offset_right = -216.0
offset_bottom = -305.0
grow_horizontal = 2
scale = Vector2(3, 3)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score2" type="Label" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 136.0
offset_top = -328.0
offset_right = 176.0
offset_bottom = -305.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.555, 0.555)

[node name="Control" type="Control" parent="Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -576.0
offset_top = -432.0
offset_right = 576.0
offset_bottom = 432.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Camera2D/Control"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dvta0")
metadata/_edit_use_anchors_ = true

[node name="VSlider" type="VSlider" parent="Camera2D/Control/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.149
anchor_top = 0.5
anchor_right = 0.149
anchor_bottom = 0.5
offset_left = -27.648
offset_top = -184.0
offset_right = 28.352
offset_bottom = 200.0
theme = SubResource("Theme_f367e")
max_value = 1500.0
step = 50.0
value = 150.0
rounded = true

[node name="Label" type="Label" parent="Camera2D/Control/Panel/VSlider"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.033
anchor_right = 0.5
anchor_bottom = -0.033
offset_left = -131.0
offset_top = -67.328
offset_right = -27.0
offset_bottom = -44.328
scale = Vector2(2.525, 2.525)
text = "CPU smartness"

[node name="AIEnabled" type="CheckButton" parent="Camera2D/Control/Panel"]
layout_mode = 0
offset_left = 761.0
offset_top = 400.0
offset_right = 891.0
offset_bottom = 431.0
scale = Vector2(2, 2)
button_pressed = true
text = "CPU Enabled"

[node name="Options" type="Button" parent="Camera2D/Control/Panel" node_paths=PackedStringArray("window")]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.65
offset_top = 38.0
offset_right = -42.65
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.05, 3.05)
text = "SETTINGS"
script = ExtResource("10_vwyb0")
window = NodePath("../../Settings")

[node name="Back" type="Button" parent="Camera2D/Control/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -132.0
offset_right = -41.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.05, 3.05)
text = "BACK"

[node name="Settings" type="Panel" parent="Camera2D/Control"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dvta0")
metadata/_edit_use_anchors_ = true

[node name="Back" type="Button" parent="Camera2D/Control/Settings" node_paths=PackedStringArray("window")]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.801
anchor_top = 0.184
anchor_right = 0.801
anchor_bottom = 0.184
offset_left = -98.7521
offset_top = -46.976
offset_right = -33.7521
offset_bottom = -15.976
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.05, 3.05)
text = "BACK"
script = ExtResource("10_vwyb0")
open = false
window = NodePath("..")

[node name="Graphics" type="Button" parent="Camera2D/Control/Settings" node_paths=PackedStringArray("window")]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.68
offset_top = -48.0
offset_right = -45.68
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.05, 3.05)
text = "GRAPHICS"
script = ExtResource("10_vwyb0")
window = NodePath("../../Graphics")

[node name="VolumeSlider" type="HSlider" parent="Camera2D/Control/Settings"]
layout_mode = 0
offset_left = 320.0
offset_top = 744.0
offset_right = 820.0
offset_bottom = 760.0
max_value = 1.0
step = 0.01

[node name="Label" type="Label" parent="Camera2D/Control/Settings/VolumeSlider"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -69.0
offset_right = 32.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.525, 2.525)
text = "Volume"

[node name="Graphics" type="Panel" parent="Camera2D/Control"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dvta0")
metadata/_edit_use_anchors_ = true

[node name="Back" type="Button" parent="Camera2D/Control/Graphics" node_paths=PackedStringArray("window")]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.801
anchor_top = 0.184
anchor_right = 0.801
anchor_bottom = 0.184
offset_left = -98.7521
offset_top = -46.976
offset_right = -33.7521
offset_bottom = -15.976
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.05, 3.05)
text = "BACK"
script = ExtResource("10_vwyb0")
open = false
window = NodePath("..")

[node name="Enabled" type="CheckButton" parent="Camera2D/Control/Graphics"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.278
anchor_top = 0.184
anchor_right = 0.278
anchor_bottom = 0.184
offset_left = -120.256
offset_top = -30.976
offset_right = 5.74396
offset_bottom = 0.0239868
scale = Vector2(2, 2)
button_pressed = true
text = "CRT Effect"

[node name="Vignette" type="HSlider" parent="Camera2D/Control/Graphics"]
layout_mode = 0
offset_left = 120.0
offset_top = 727.0
offset_right = 620.0
offset_bottom = 743.0
min_value = -10.0
max_value = 10.0
step = 0.1
value = 0.4

[node name="Label" type="Label" parent="Camera2D/Control/Graphics/Vignette"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -69.0
offset_right = -17.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.525, 2.525)
text = "Vignette"
horizontal_alignment = 1

[node name="ChromaticAbberation" type="HSlider" parent="Camera2D/Control/Graphics"]
layout_mode = 0
offset_left = 120.0
offset_top = 634.0
offset_right = 620.0
offset_bottom = 650.0
min_value = -1.0
max_value = 1.0
step = 0.01
value = 0.02

[node name="Label" type="Label" parent="Camera2D/Control/Graphics/ChromaticAbberation"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.0
offset_top = -80.0
offset_right = -46.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.525, 2.525)
text = "Chromatic Abberation"
horizontal_alignment = 1

[node name="Cursor" type="TextureRect" parent="Camera2D/Control"]
layout_mode = 0
offset_right = 30.0
offset_bottom = 50.0
mouse_filter = 2
texture = ExtResource("11_7001w")

[node name="CRT" type="ColorRect" parent="Camera2D/Control"]
visibility_layer = 2
material = SubResource("ShaderMaterial_2u148")
layout_mode = 1
anchors_preset = -1
anchor_left = -0.001
anchor_top = -0.001
anchor_right = 1.001
anchor_bottom = 1.001
offset_left = 1.152
offset_top = 0.864
offset_right = -1.1521
offset_bottom = 0.135986
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("12_juhkd")

[node name="PowerUpTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 5.0
autostart = true

[connection signal="area_entered" from="PaddleZone1" to="Paddle2" method="_on_paddle_zone_1_area_entered"]
[connection signal="area_entered" from="PaddleZone2" to="Paddle1" method="_on_paddle_zone_2_area_entered"]
[connection signal="value_changed" from="Camera2D/Control/Panel/VSlider" to="." method="_on_v_slider_value_changed"]
[connection signal="toggled" from="Camera2D/Control/Panel/AIEnabled" to="Paddle2" method="_on_ai_enabled_toggled"]
[connection signal="pressed" from="Camera2D/Control/Panel/Options" to="Camera2D/Control/Panel/Options" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Control/Panel/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Camera2D/Control/Settings/Back" to="Camera2D/Control/Settings/Back" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Control/Settings/Graphics" to="Camera2D/Control/Settings/Graphics" method="_on_pressed"]
[connection signal="value_changed" from="Camera2D/Control/Settings/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="Camera2D/Control/Graphics/Back" to="Camera2D/Control/Graphics/Back" method="_on_pressed"]
[connection signal="toggled" from="Camera2D/Control/Graphics/Enabled" to="Camera2D/Control/CRT" method="_on_enabled_toggled"]
[connection signal="value_changed" from="Camera2D/Control/Graphics/Vignette" to="Camera2D/Control/CRT" method="_on_vignette_value_changed"]
[connection signal="value_changed" from="Camera2D/Control/Graphics/ChromaticAbberation" to="Camera2D/Control/CRT" method="_on_chromatic_abberation_value_changed"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
